# llm-data

./: pyproject.toml
src/llm-data/: loader.py
src/llm_data/: encoding.py  loader.py  utils.py
src/llm_data/factories/: embedding.py
src/llm_data/filters/: filters.py
src/llm_data/mai-thinking-1/: filters.py
src/llm_data/parsers/: html.py
