[project]
name = "llm-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daft[ray]>=0.7.16",
    "ftfy>=6.3.1",
    "google-re2>=1.1.20251105",
    "kernels<0.15",
    "magic-html>=0.1.8",
    "resiliparse>=1.0.8",
    "sentence-transformers>=5.6.0",
    "text-dedup>=0.4.1",
    "trafilatura>=2.1.0",
]
